# water-fcpg-tools

./: .gitignore  .readthedocs.yaml  AreaD8.slurm  CPG_comparison.ipynb  FCPGtools_env.yml  Get_basin_chars.ipynb  GoogleDriveDownloader.py  LICENSE  MACAv2slayer.py  README.md  README.rst  SSURGOSlayer  SSURGOSlayer.py  accumulate_test_data.sh  batchCPGs.py  batchDecayCPGs.py  batchHUCs.py  buildVRT.py  changeNoData.py  check_catchment_delineation.ipynb  check_catchment_delineation.py  code.json  convertFDR.py  convert_fdr.sh  d8todinfinity.py  decayAccum.py  decay_accum_tempqeqa58zw.tif  define_cpg_proj.sh  define_delineation_projection.sh  detectMissing.py  dev_environment.yml  downloadNHDPlus.py  environment.yml  environment_dev.yml  explore_cascade.ipynb  extract.sh  extract_watersheds.py  extract_watersheds_lowmem.py  extract_watersheds_upstream.py  find_drainage_areas.ipynb  (+77 more)
.gitlab/issue_templates/: bug.md  new_project.md
CPGtools/: cpg_notes.xlsx  fill_no_data.sh  get_NHDplusV2_fac_fdr.sh  make_cpg_tauDEM.py  make_paramNodata.py  reclassify_drainage_dir.ipynb  rescale.py  snap_gauges.sh  wkt2proj4_NHDplusV21.py
FCPGtools/: __init__.py  netCDFmaker.py  tools.py
FCPGtools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: .buildinfo  Makefile  batch_fcpgs_hpc.html  cascade_fcpg.html  conf.py  cookbook.html  detect_missing.html  four_digit.html  functions.html  genindex.html  index.html  index.rst  make.bat  make_TauDEM_files.html  migrating_from_v1.html  objects.inv  publications.html  py-modindex.html  search.html  searchindex.js  two_digit.html  z_references.html
docs/.doctrees/: batch_fcpgs_hpc.doctree  cascade_fcpg.doctree  environment.pickle  publications.doctree  two_digit.doctree  z_references.doctree
docs/_modules/: index.html  tools.html
docs/_sources/: batch_fcpgs_hpc.rst.txt  index.rst.txt
docs/_static/: documentation_options.js
docs/doctrees/: d8todinfinity.doctree  detect_missing.doctree  environment.pickle  example_scripts.doctree  four_digit.doctree  index.doctree  z_references.doctree
docs/html/: detect_missing.html  index.html  search.html
docs/img/: flow_chart_editable_file.drawio
docs/source/: Makefile  conf.py  contributions.md  cookbook.md  cookbook.rst  custom_types.rst  functions.rst  getting_started.md  index.rst  migrating_from_v1.md  publications.rst  refactored_names.md  refs.bib  requirements.txt  terrain_engine.rst  z_references.rst
docs_deprecated/: batch_fcpgs_hpc.html  cookbook.html  detect_missing.html  four_digit.html  genindex.html
docs_deprecated/_modules/: index.html
docs_deprecated/_sources/: cascade_fcpg.rst.txt  detect_missing.rst.txt  four_digit.rst.txt
docs_deprecated/source/: conf.py
doctrees/: custom_types.doctree  functions.doctree  getting_started.doctree
documentation/: FCPGtools_documentation_v0.9.0.docx  word_conversion.docx
documentation/doctrees/: batch_decay_fcpgs_hpc.doctree  batch_fcpgs_hpc.doctree  cascade_fcpg.doctree  cookbook.doctree  decayed_fcpgs.doctree  detect_missing.doctree  environment.pickle  four_digit.doctree  functions.doctree  glossary.doctree  index.doctree  index_orig.doctree  make_TauDEM_files.doctree  two_digit.doctree  z_references.doctree
documentation/html/: .buildinfo  batch_decay_fcpgs_hpc.html  batch_fcpgs_hpc.html  cascade_fcpg.html  cookbook.html  d8todinfinity.html  decayed_fcpgs.html  (+15 more)
examples/: dist2stream_temp18044jqe.tif  fac_tempaoca3fi_.tif  fac_tempiabb2nvx.tif  fac_tempo6hdtjcq.tif  fac_tempr5zd284b.tif  fac_tempzj6eqaqo.tif  fcpgtools_v2_demo.ipynb  fdr_to_fac_tempzn2ziin1.tif  refactor_demo_notebook.ipynb  refactored_names.md  test_notebook.ipynb  testing.py  v2_fcpgtools_demo.ipynb
fcpgtools/: tools.py
img/: CPG_tool_structure.pptx
sandbox/: ExampleUSGSArchitecture.ipynb  xrnogueira_ABCs_design.ipynb  xrnogueira_sandbox.ipynb
scripts/: batchDecayCPGs.py  batchFCPGs.py  batchHUCs.py  cascade_huc2.py  cascade_huc4.py  detectMissing.py  makeCPG.py  makeDecayFCPG.py  makeFCPG.py  maketauDEMfiles.py
source/: Makefile  batch_decay_fcpgs_hpc.rst  build_docs.sh  cascade_fcpg.rst  conf.py  cookbook.rst  functions.rst  glossary.rst  index.rst  index_orig.rst  modules.rst  refs.bib
test_data/: validation_upstream_fdr.tif
(+66 files in other folders)
